--- a/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
+++ b/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
@@ -24,14 +24,14 @@
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="TaskName">Account Name</label>
-                                            <input type="text" name="accountName" class="form-control"
+                                            <input type="text" autocomplete="off" name="accountName" class="form-control"
                                                 [(ngModel)]="accountDto.accountName">
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="TaskName"> Account No.</label>
-                                            <input type="text" name="accountNumber" (focusout)="CheckAccountNumber()" class="form-control"
+                                            <input type="text" autocomplete="off" name="accountNumber" (focusout)="CheckAccountNumber()" class="form-control"
                                                 [(ngModel)]="accountDto.accountNumber">
                                                 <span style="color:red" *ngIf="isAccountExist">Account Number is already exist.</span>   
                                         </div>
@@ -106,19 +106,15 @@
                                         </div>
                                     </div>                             
                                 </div>
-
-
-                                
-
                             </div>
                         </div>
                         <div class="kt-portlet__head">
                         </div>
                         <div class="form-group margin-top-5">
-                            <button *ngIf="editAccountCheck == false" class="btn btn-brand" type="submit">
+                            <button *ngIf="editAccountCheck == false" class="btn btn-brand" type="submit"  [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')">
                                 Create
                             </button>
-                            <button *ngIf="editAccountCheck == true" class="btn btn-brand" type="submit">
+                            <button *ngIf="editAccountCheck == true" class="btn btn-brand" type="submit"  [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')">
                                 Update
                             </button>
                         </div>
