--- a/angular/src/app/main/categories/create-or-edit-category/create-or-edit-category.component.html
+++ b/angular/src/app/main/categories/create-or-edit-category/create-or-edit-category.component.html
@@ -23,7 +23,7 @@
                                 <div class="form-group">
                                     <label for="title">Title</label>
                                     <input autofocus type="text" class="form-control" id="title"  required (focusout)="CheckCategory()" name="title"
-                                        [(ngModel)]="categoryobj.title">
+                                    autocomplete="off" [(ngModel)]="categoryobj.title">
                                         <span style="color:red" *ngIf="isCategoryExist">Category with same Name already exist.</span>
                                 </div>
                             </div>
