--- a/angular/src/app/main/checklist/createtask/createtask.component.html
+++ b/angular/src/app/main/checklist/createtask/createtask.component.html
@@ -68,7 +68,7 @@
                                     <div class="form-group">
                                         <label for="taskName"> {{"Task Name" | localize}} </label>
                                         <input type="text" class="form-control" required  name="taskName" id="taskName" placeholder="Enter Task Name"
-                                            [(ngModel)]="checklist.taskName">
+                                        autocomplete="off" [(ngModel)]="checklist.taskName">
                                     </div>
                                 </div>
                                 <div class="col-md-6">
@@ -177,7 +177,7 @@
                                     <div class="form-group">
                                         <label>{{"NoofMonths" | localize}}</label>
                                         <input type="text" name="noOfMonths" [disabled]="enableValue == false"
-                                            placeholder="Enter Number" class="form-control bsDatepicker"
+                                            placeholder="Enter Number" class="form-control bsDatepicker" autocomplete="off"
                                             [(ngModel)]="checklist.noOfMonths">
                                     </div>
                                     <div class="form-group">
