--- a/angular/src/app/main/checklist/createtask/createtask.component.html
+++ b/angular/src/app/main/checklist/createtask/createtask.component.html
@@ -5,7 +5,7 @@
                 <div class="kt-subheader__main">
                     <h3 class="kt-subheader__title">
                         <img src="./assets/media/ClosingCheckList/clipboard.svg" alt="clipboard">
-                        <span class="headSpace"> Checklist</span>
+                        <span class="headSpace"> {{"Checklist" | localize}}</span>
                     </h3>
                     <span class="kt-subheader__separator kt-subheader__separator--v"></span>
                     <span *ngIf="createOrDuplicate" class="kt-subheader__desc">
@@ -13,7 +13,7 @@
                     </span>
                     <span *ngIf="!createOrDuplicate" class="kt-subheader__desc">
                         {{"DuplicateTask" | localize}}
-                     </span>
+                    </span>
                 </div>
                 <div class="kt-subheader__toolbar">
                     <div class="kt-subheader__wrapper">
@@ -35,7 +35,7 @@
                     <div class="kt-portlet__head-toolbar">
                         <a href="javascript: void(0);" (click)="redirectToTaskList()">
                             <i class="la la-arrow-left"></i>
-                            Back
+                            {{"Back" | localize}}
                         </a>
                     </div>
                 </div>
@@ -225,7 +225,6 @@
                             <span>{{"Create" | localize}}</span>
                         </button>
                     </div>
-                   
                 </div>
             </form>
             </div>
