--- a/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
+++ b/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
@@ -10,9 +10,9 @@
                         </h3>
                     </div>
                     <div class="kt-portlet__head-toolbar">
-                        <a (click)="redirectToAccountsList()">
+                        <a href="javascript: void(0);" (click)="redirectToAccountsList()">
                             <i class="la la-arrow-left"></i>
-                            Back
+                            {{"Back" | localize}}
                         </a>
                     </div>
                 </div>
