--- a/angular/src/app/main/account/accountsubtype/create-or-edit-accountsubtype/create-or-edit-accountsubtype.component.html
+++ b/angular/src/app/main/account/accountsubtype/create-or-edit-accountsubtype/create-or-edit-accountsubtype.component.html
@@ -9,9 +9,9 @@
                         </h3>
                     </div>
                     <div class="kt-portlet__head-toolbar">
-                        <a>
+                        <a href="javascript: void(0);" (click)="redirectToSubAccountsList()">
                             <i class="la la-arrow-left"></i>
-                            Back
+                            {{"Back" | localize}}
                         </a>
                     </div>
                 </div>
