--- a/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.html
@@ -9,9 +9,9 @@
                                             </h3>
                                         </div>
                                         <div class="kt-portlet__head-toolbar">
-                                            <a class="cursor_pointer" (click)="redirectToAmortizedList()">
+                                            <a href="javascript: void(0);" (click)="redirectToAmortizedList()">
                                                 <i class="la la-arrow-left"></i>
-                                                Back
+                                                {{"Back" | localize}}
                                             </a>
                                         </div>
                                     </div>
