--- a/angular/src/app/main/reconcilliation/itemized/create-edit-itemized/create-edit-itemized.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/create-edit-itemized/create-edit-itemized.component.html
@@ -11,9 +11,9 @@
                         </h3>
                     </div>
                     <div class="kt-portlet__head-toolbar">
-                        <a (click)="redirectToItemsList()">
+                        <a href="javascript: void(0);" (click)="redirectToItemsList()">
                             <i class="la la-arrow-left"></i>
-                            Back
+                            {{"Back" | localize}}
                         </a>
                     </div>
                 </div>
