--- a/angular/src/app/main/account/accounts/accounts.component.html
+++ b/angular/src/app/main/account/accounts/accounts.component.html
@@ -156,7 +156,7 @@
                                         </div>
                                     </form>
                                     <div class="form-group category-selector">
-                                        <button type="button" class="btn btn-secondary dropdown-toggle"
+                                        <button type="button" class="btn btn-secondary text-dark dropdown-toggle"
                                             data-toggle="dropdown" aria-haspopup="true"
                                             aria-expanded="false">{{accountType}}</button>
                                         <div class="dropdown-menu">
