--- a/angular/src/app/main/exceptions/exceptions.component.html
+++ b/angular/src/app/main/exceptions/exceptions.component.html
@@ -100,7 +100,7 @@
                                         <td style="width: 20%">
                                             <span class="ui-column-title"> {{'UserName' | localize}}</span>
                                             <!-- {{record.filePath}} -->
-                                            <a href="{{record.filePath}}" target="_blank" >Download</a>
+                                            <a style="color: #848fe4;" (click)="downloadFile(record.filePath)">Download</a>
                                         </td>
                                         <!-- <td style="width: 20%">
                                             <span class="ui-column-title"> {{'UserName' | localize}}</span>
