Trial balance rolback, Import/Export issues fixed , validation mesges etc

--- a/angular/src/app/main/exceptions/exceptions.component.html
+++ b/angular/src/app/main/exceptions/exceptions.component.html
@@ -75,6 +75,10 @@
                                             Error
      
                                              </th>
+                                             <th>
+                                                Actions
+         
+                                                 </th>
                                     </tr>
 
                                 </ng-template>
@@ -97,11 +101,29 @@
                                             <span class="ui-column-title"> {{'UserName' | localize}}</span>
                                             {{record.records}}
                                         </td>
-                                        <td style="width: 20%">
+                                        <td *ngIf="record.filePath" style="width: 20%">
                                             <span class="ui-column-title"> {{'UserName' | localize}}</span>
                                             <!-- {{record.filePath}} -->
                                             <a href="{{record.filePath}}" target="_blank" >Download</a>
                                         </td>
+                                        <td *ngIf="!record.filePath"> 
+                                              -
+                                        </td> 
+                                        
+                                        <div *ngIf="record.type == 'TrialBalance'">
+                                           
+                                                <td *ngIf="!record.isRollBacked">
+                                                    <a  class="btn"
+                                                    href="javascript:;" (click)="RollBack(record.id)">
+                                                    <img src="../../../../assets/img/edit.svg"></a>
+                                                </td>
+                                               
+                                           
+                                        </div>
+                                       
+                                        
+                                      
+                                        
                                         <!-- <td style="width: 20%">
                                             <span class="ui-column-title"> {{'UserName' | localize}}</span>
                                             {{record.failedRecordsCount}}
