--- a/angular/src/app/main/errorlog/errorlog.component.html
+++ b/angular/src/app/main/errorlog/errorlog.component.html
@@ -44,31 +44,36 @@
                                         <th style="width: 20%">{{l('Records')}}</th>
 
                                         <th style="width: 20%"> {{l('Erros')}} </th>
+
+                                        <th style="width: 20%"> {{l('Action')}} </th>
                                     </tr>
 
                                 </ng-template>
                                 <ng-template pTemplate="body" let-record="$implicit">
                                     <tr>
                                         <td style="width: 20%">
-                                            <span class="ui-column-title"> {{'Name' | localize}}</span>
                                             {{record.creationTime | momentFormat:'L hh:mm a'}}
                                         </td>
                                         <td style="width: 20%">
-                                            <span class="ui-column-title"> {{'UserName' | localize}}</span>
                                             {{record.type}}
                                         </td>
                                         <td style="width: 20%">
-                                            <span class="ui-column-title"> {{'Name' | localize}}</span>
                                             {{record.createdBy}}
                                         </td>                                                                  
                                         <td style="width: 20%">
-                                            <span class="ui-column-title"> {{'UserName' | localize}}</span>
                                             {{record.records}}
                                         </td>
                                         <td style="width: 20%">
-                                            <span class="ui-column-title"> {{'UserName' | localize}}</span>
-                                            <a style="color: #848fe4;cursor: pointer !important;" (click)="downloadFile(record.filePath)">Download</a>
+                                            <a *ngIf="record.filePath" style="color: #848fe4;cursor: pointer !important;" (click)="downloadFile(record.filePath)">Download</a>
+                                            <a *ngIf="!record.filePath">-</a>
                                         </td>
+                                        <div *ngIf="record.type == 'TrialBalance'">
+                                            <td *ngIf="!record.isRollBacked">
+                                                <a  class="btn"
+                                                href="javascript:;" (click)="rollBack(record.id)">
+                                                <img src="../../../../assets/img/edit.svg"></a>
+                                            </td>
+                                        </div>
                                     </tr>
                                 </ng-template>
                             </p-table>
